<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.andrewfischer.citationbuddy.activities.DetailActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <EditText
                android:id="@+id/author_fname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_author_fname"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".8">
            <EditText
                android:id="@+id/author_mi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_author_mi"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <EditText
                android:id="@+id/author_lname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_author_lname"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.2">
            <EditText
                android:id="@+id/author_suffix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_author_suffix"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/source_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_title"/>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".7">
            <EditText
                android:id="@+id/source_vol"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:hint="@string/hint_volume_num"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".7">
            <EditText
                android:id="@+id/source_vol_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:hint="@string/hint_volume_count"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".7">
            <EditText
                android:id="@+id/source_edition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_edition_num"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.6">
            <EditText
                android:id="@+id/source_series"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_series_name"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/source_publisher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_publisher_name"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".612">
            <EditText
                android:id="@+id/source_pubdate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:hint="@string/hint_pub_date"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/citation_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_citation"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/citation_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_citation"
            android:backgroundTint="@color/colorAccent"/>
    </LinearLayout>
</LinearLayout>
