<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <EditText
            android:id="@+id/author_fname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_author_fname" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".8">

        <EditText
            android:id="@+id/author_mi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_author_mi" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <EditText
            android:id="@+id/author_lname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_author_lname" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.2">

        <EditText
            android:id="@+id/author_suffix"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_author_suffix" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>