<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_three_line_height"
    >

    <ImageView
        android:id="@+id/result_cover"
        android:layout_width="58dp"
        android:layout_height="80dp"
        android:layout_weight="0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingEnd="@dimen/list_item_padding"
        android:orientation="vertical">
        <TextView
            android:id="@+id/result_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:text="@string/placeholder_title"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/result_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:text="@string/placeholder_author"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/result_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:text="@string/placeholder_publisher"/>

                <TextView
                    android:id="@+id/result_pubdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    style="@style/Base.TextAppearance.AppCompat.Caption"
                    android:text="@string/placeholder_pubdate"/>
                </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>