<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/cardViewBackground"
    android:layout_height="match_parent"
    tools:context="me.andrewfischer.citationbuddy.activities.MainActivity">



    <android.support.v7.widget.RecyclerView
        android:id="@+id/citation_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="55dp"
        android:clipToPadding="false"/>

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:tabTextColor="@color/cardview_light_background"
        app:tabSelectedTextColor="@color/colorAccentLight"
        style="@style/Widget.AppCompat.ActionBar.TabBar">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/citetype_MLA"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/citetype_APA"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/citetype_CMS"/>
    </android.support.design.widget.TabLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:useCompatPadding="true"
        app:fabSize="normal"
        android:src="@drawable/ic_add"/>


</FrameLayout>
